# omp-headroom

./: .gitignore  .prettierignore  README.md  biome.json  eslint.config.mjs  install.sh  package.json  tsconfig.json
.github/: CHANGELOG.md  CONTRIBUTING.md  FUNDING.yml  README.md  THIRD_PARTY_NOTICES.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dist-tag.yml  npm-unpublish.yml  release.yml
.omp-plugin/: marketplace.json
.scripts/: packed-plugin-smoke.mjs  scan-leaks.mjs  sync-extension.mjs
extension/: headroom.ts
plugins/headroom-omp-stats/: pyproject.toml
plugins/headroom-omp-stats/src/headroom_omp_stats/: __init__.py
src/: archive-stats.ts  ccr.ts  commands.ts  compression.ts  config.ts  index.ts  messages.ts  provider.ts  proxy.ts  python-env.ts  service.ts  session-archive.ts  state.ts  tools.ts  types.ts  util.ts  widget.ts
systemd/: headroom-proxy.service.in
tests/: adaptive.test.mjs  archive-projection.test.mjs  archive-stats.test.mjs  ccr-fallback.test.mjs  ccr-lifecycle.test.mjs  commands.test.mjs  compacting.test.mjs  compaction.test.mjs  config-settings.test.mjs  headroom-wrap-compat.test.mjs  package-assets.test.mjs  prewarm.test.mjs  provisioning.test.mjs  python-env.test.mjs  responses-batching.test.mjs  service.test.mjs  token-fidelity.test.mjs  tool-registration.test.mjs  widget.test.mjs
