[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "headroom-omp-stats"
version = "1.0.0"
description = "Headroom proxy extension: funnel /v1/compress results into proxy stats so the dashboard reflects SDK traffic"
requires-python = ">=3.10"

[project.entry-points."headroom.proxy_extension"]
omp_stats = "headroom_omp_stats:install"

[tool.hatch.build.targets.wheel]
packages = ["src/headroom_omp_stats"]
